force-app/main/default/objects/YouTube_Quant__c/YouTube_Quant__c.object-meta.xml
<CustomObject>
    <label>YouTube_Quant</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>YouTube_Quants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>