force-app/main/default/objects/YouTube_Quant__c/fields/Date_Published__c.field-meta.xml
<CustomField>
    <fullName>Date_Published__c</fullName>
    <label>Date Published</label>
    <type>DateTime</type>
</CustomField>