force-app/main/default/objects/YouTube_Quant__c/fields/Total_Comments__c.field-meta.xml
<CustomField>
    <fullName>Total_Comments__c</fullName>
    <label>Total Comments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>