force-app/main/default/objects/YouTube_Quant__c/fields/Video_ID__c.field-meta.xml
<CustomField>
    <fullName>Video_ID__c</fullName>
    <description>ID of this individual YouTube Video</description>
    <label>Video ID</label>
    <length>125</length>
    <type>Text</type>
</CustomField>